fix(nav): left-align mobile menu items
- Override align-items to stretch on mobile ul
- Set text-align: left on mobile links
- Set display: block and width: 100% on li elements
- Remove hover background on mobile menu items

--- a/themes/usips/sass/layout/_header.scss
+++ b/themes/usips/sass/layout/_header.scss
@@ -113,6 +113,7 @@
 @media (max-width: $breakpoint-mobile) {
     #mobile-menu-toggle {
         display: flex;
+        align-self: center;
     }
 
     #main-nav {
@@ -130,21 +131,31 @@
         }
 
         ul {
+            display: flex;
             flex-direction: column;
+            align-items: stretch;
             padding: $spacing-sm;
         }
 
         li {
+            display: block;
             height: auto;
+            width: 100%;
 
             &.hide-mobile {
                 display: block !important;
             }
+
+            &:hover {
+                background: none;
+            }
         }
 
         a {
+            display: block;
             padding: $spacing-sm;
-            justify-content: flex-start;
+            text-align: left;
+            width: 100%;
         }
 
         .submenu {
@@ -160,9 +171,16 @@
                 padding: 0 0 0 $spacing-md;
             }
 
+            li {
+                &:hover {
+                    background: none;
+                }
+            }
+
             a {
                 padding: $spacing-xs $spacing-sm;
                 font-size: 0.95rem;
+                color: $text-color;
             }
         }
     }
